--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,180 @@
-.App {
-  text-align: center;
+body {
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.song {
+    display: flex;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.07);
+    padding: 5px 10px;
+    justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.song-controller {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    background: none;
+    border: 1px solid rgba(0, 0, 0, 0.07);
+    border-radius: 100%;
+    cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.song-controller img {
+    width: 30px;
+    height: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.play-controller img {
+    margin-left: 4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.song-name {
+    margin-left: 10px;
+    color: #C9C9C9;
+}
+
+.song-name a {
+    color: #959595;
+}
+
+.volume-controller {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    max-width: 250px;
+}
+
+.time-controller {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: auto;
+    max-width: 250px;
+}
+
+.time-controller span {
+    color: #959595;
+}
+
+.volume-icon {
+    width: 30px;
+}
+
+.time-slider {
+    cursor: pointer;
+    border: none;
+    height: 24px;
+    -webkit-appearance: none;
+    margin: 10px 10px;
+    width: 100%;
+    max-width: 200px;
+}
+
+.volume-slider {
+    cursor: pointer;
+    border: none;
+    height: 24px;
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 100%;
+    max-width: 200px;
+    margin-left: 10px;
+}
+
+.time-slider:focus, .volume-slider:focus {
+    outline: none;
+}
+
+.time-slider::-webkit-slider-runnable-track, .volume-slider::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #D5DBD3;
+    border-radius: 5px;
+    border: 0px solid #000000;
+}
+
+.time-slider::-webkit-slider-thumb, .volume-slider::-webkit-slider-thumb {
+    box-shadow: 0px 0px 0px #000000;
+    border: 1px solid #C9C9C9;
+    height: 17px;
+    width: 17px;
+    border-radius: 34px;
+    background: #FFFFFF;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -4px;
+}
+
+.time-slider:focus::-webkit-slider-runnable-track, .volume-slider:focus::-webkit-slider-runnable-track {
+    background: #D5DBD3;
+}
+
+.time-slider::-moz-range-track, .volume-slider::-moz-range-track {
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #D5DBD3;
+    border-radius: 5px;
+    border: 0px solid #000000;
+}
+
+.time-slider::-moz-range-thumb, .volume-slider::-moz-range-thumb {
+    box-shadow: 0px 0px 0px #000000;
+    border: 1px solid #C9C9C9;
+    height: 17px;
+    width: 17px;
+    border-radius: 34px;
+    background: #FFFFFF;
+    cursor: pointer;
+}
+
+.time-slider::-ms-track, .volume-slider::-ms-track {
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+
+.time-slider::-ms-fill-lower, .volume-slider::-ms-fill-lower {
+    background: #D5DBD3;
+    border: 0px solid #000000;
+    border-radius: 10px;
+    box-shadow: 0px 0px 0px #000000;
+}
+
+.time-slider::-ms-fill-upper, .volume-slider::-ms-fill-upper {
+    background: #D5DBD3;
+    border: 0px solid #000000;
+    border-radius: 10px;
+    box-shadow: 0px 0px 0px #000000;
+}
+
+.time-slider::-ms-thumb, .volume-slider::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 0px 0px 0px #000000;
+    border: 1px solid #C9C9C9;
+    height: 17px;
+    width: 17px;
+    border-radius: 34px;
+    background: #FFFFFF;
+    cursor: pointer;
+}
+
+.time-slider:focus::-ms-fill-lower, .volume-slider:focus::-ms-fill-lower {
+    background: #D5DBD3;
+}
+
+.time-slider:focus::-ms-fill-upper, .volume-slider:focus::-ms-fill-upper {
+    background: #D5DBD3;
 }
