--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,44 @@
 body {
-
+    padding: 0;
+    margin: 0;
 }
 
 .song {
     display: flex;
     border-bottom: 1px solid rgba(0, 0, 0, 0.07);
-    padding: 5px 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     justify-content: center;
+    align-items: center;
+}
+
+.song-data {
+    width: 30%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.song-cover {
+    width: 50px;
+    height: 50px;
+}
+
+.volume-controller {
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.song-control {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 40%;
 }
 
 .song-controller {
@@ -39,28 +71,22 @@ body {
     color: #959595;
 }
 
-.volume-controller {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: auto;
-    max-width: 250px;
-}
-
 .time-controller {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: auto;
-    max-width: 250px;
+    width: 100%;
+    max-width: 400px;
 }
 
 .time-controller span {
     color: #959595;
+    font-size: 12px;
+    margin-bottom: 1px;
 }
 
 .volume-icon {
-    width: 30px;
+    width: 20px;
     cursor: pointer;
 }
 
@@ -71,27 +97,26 @@ body {
     -webkit-appearance: none;
     margin: 10px 10px;
     width: 100%;
-    max-width: 200px;
 }
 
 .volume-slider {
     cursor: pointer;
     border: none;
-    height: 24px;
+    height: 8px;
     -webkit-appearance: none;
     margin: 10px 0;
     width: 100%;
-    max-width: 200px;
+    max-width: 100px;
     margin-left: 10px;
 }
 
-.time-slider:focus, .volume-slider:focus {
+.volume-slider:focus {
     outline: none;
 }
 
-.time-slider::-webkit-slider-runnable-track, .volume-slider::-webkit-slider-runnable-track {
+.volume-slider::-webkit-slider-runnable-track {
     width: 100%;
-    height: 10px;
+    height: 8px;
     cursor: pointer;
     animate: 0.2s;
     box-shadow: 0px 0px 0px #000000;
@@ -100,23 +125,23 @@ body {
     border: 0px solid #000000;
 }
 
-.time-slider::-webkit-slider-thumb, .volume-slider::-webkit-slider-thumb {
+.volume-slider::-webkit-slider-thumb {
     box-shadow: 0px 0px 0px #000000;
     border: 1px solid #C9C9C9;
-    height: 17px;
-    width: 17px;
+    height: 8px;
+    width: 15px;
     border-radius: 34px;
     background: #FFFFFF;
     cursor: pointer;
     -webkit-appearance: none;
-    margin-top: -4px;
+    margin-top: -0.5px;
 }
 
-.time-slider:focus::-webkit-slider-runnable-track, .volume-slider:focus::-webkit-slider-runnable-track {
+.volume-slider:focus::-webkit-slider-runnable-track {
     background: #D5DBD3;
 }
 
-.time-slider::-moz-range-track, .volume-slider::-moz-range-track {
+.volume-slider::-moz-range-track {
     width: 100%;
     height: 10px;
     cursor: pointer;
@@ -127,7 +152,7 @@ body {
     border: 0px solid #000000;
 }
 
-.time-slider::-moz-range-thumb, .volume-slider::-moz-range-thumb {
+.volume-slider::-moz-range-thumb {
     box-shadow: 0px 0px 0px #000000;
     border: 1px solid #C9C9C9;
     height: 17px;
@@ -137,7 +162,7 @@ body {
     cursor: pointer;
 }
 
-.time-slider::-ms-track, .volume-slider::-ms-track {
+.volume-slider::-ms-track {
     width: 100%;
     height: 10px;
     cursor: pointer;
@@ -147,21 +172,21 @@ body {
     color: transparent;
 }
 
-.time-slider::-ms-fill-lower, .volume-slider::-ms-fill-lower {
+.volume-slider::-ms-fill-lower {
     background: #D5DBD3;
     border: 0px solid #000000;
     border-radius: 10px;
     box-shadow: 0px 0px 0px #000000;
 }
 
-.time-slider::-ms-fill-upper, .volume-slider::-ms-fill-upper {
+.volume-slider::-ms-fill-upper {
     background: #D5DBD3;
     border: 0px solid #000000;
     border-radius: 10px;
     box-shadow: 0px 0px 0px #000000;
 }
 
-.time-slider::-ms-thumb, .volume-slider::-ms-thumb {
+.volume-slider::-ms-thumb {
     margin-top: 1px;
     box-shadow: 0px 0px 0px #000000;
     border: 1px solid #C9C9C9;
@@ -172,10 +197,137 @@ body {
     cursor: pointer;
 }
 
-.time-slider:focus::-ms-fill-lower, .volume-slider:focus::-ms-fill-lower {
+.volume-slider:focus::-ms-fill-lower {
     background: #D5DBD3;
 }
 
-.time-slider:focus::-ms-fill-upper, .volume-slider:focus::-ms-fill-upper {
+.volume-slider:focus::-ms-fill-upper {
     background: #D5DBD3;
+}
+
+.time-slider {
+    --bar-bg: #D5DBD3;
+    --seek-before-color: #b1b3b1;
+    --knoby: red;
+    --selectedKnoby: blue;
+
+    border-radius: 10px;
+    appearance: none;
+    background: var(--bar-bg);
+    position: relative;
+    width: 100%;
+    height: 8px;
+    outline: none;
+}
+
+.time-slider:focus {
+    outline: none;
+}
+
+.time-slider::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #D5DBD3;
+    border-radius: 5px;
+    border: 0px solid #000000;
+}
+
+.time-slider::-webkit-slider-thumb {
+    box-shadow: 0px 0px 0px #000000;
+    border: none;
+    height: 15px;
+    width: 17px;
+    border-radius: 34px;
+    background: none;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -4px;
+    z-index: 4;
+    position: relative;
+}
+
+.time-slider:focus::-webkit-slider-runnable-track {
+    background: #D5DBD3;
+}
+
+.time-slider::-moz-range-track {
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #D5DBD3;
+    border-radius: 5px;
+    border: 0px solid #000000;
+}
+
+.time-slider::-moz-range-thumb {
+    margin-left: 10px;
+    z-index: 5;
+    box-shadow: 0px 0px 0px #000000;
+    border: 1px solid #C9C9C9;
+    height: 17px;
+    width: 17px;
+    border-radius: 34px;
+    background: #FFFFFF;
+    cursor: pointer;
+}
+
+.time-slider::-ms-track {
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+
+.time-slider::-ms-fill-lower {
+    background: #D5DBD3;
+    border: 0px solid #000000;
+    border-radius: 10px;
+    box-shadow: 0px 0px 0px #000000;
+}
+
+.time-slider::-ms-fill-upper {
+    background: #D5DBD3;
+    border: 0px solid #000000;
+    border-radius: 10px;
+    box-shadow: 0px 0px 0px #000000;
+}
+
+.time-slider::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 0px 0px 0px #000000;
+    border: 1px solid #C9C9C9;
+    height: 17px;
+    width: 17px;
+    border-radius: 34px;
+    background: #FFFFFF;
+    cursor: pointer;
+}
+
+.time-slider:focus::-ms-fill-lower {
+    background: #D5DBD3;
+}
+
+.time-slider:focus::-ms-fill-upper {
+    background: #D5DBD3;
+}
+
+.time-slider::before {
+    content: '';
+    width: var(--seek-before-width);
+    height: 10px;
+    border-radius: 10px;
+    background: #a3a3a3;
+    position: absolute;
+    top: -1px;
+    left: 0;
+    z-index: 0;
+    cursor: pointer;
 }
