Player styles have been moved to a separate folder, grid layout of the project has been created, folders with components and styles have been created: Homepage, Footer, Navigation, Profile.

--- a/src/App.css
+++ b/src/App.css
@@ -1,361 +1,27 @@
-body {
-    padding: 0;
-    margin: 0;
+.app-wrapper {
+    display: grid;
+    grid-template-areas: 'P N N'
+                         'P H H'
+                         'F F F';
+    grid-template-rows: 1fr 10fr 2fr ;
+    grid-template-columns: 1fr 3fr 1fr ;
 }
 
-.song {
-    display: flex;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.07);
-    padding-top: 10px;
-    padding-bottom: 10px;
-    justify-content: center;
-    align-items: center;
+.Nav {
+    grid-area: N;
 }
 
-.song-data {
-    width: 30%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.Profile {
+    grid-area: P;
+    background-color: #07575B;
 }
 
-.song-cover {
-    width: 50px;
-    height: 50px;
+.Homepage {
+    grid-area: H;
 }
 
-.volume-controller {
-    width: 30%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+.Footer {
+    grid-area: F;
+    background-color: #66A5AD;
 }
 
-.song-control {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 40%;
-}
-
-.song-controller {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    background: none;
-    border: 1px solid rgba(0, 0, 0, 0.07);
-    border-radius: 100%;
-    cursor: pointer;
-}
-
-.song-controller img {
-    width: 30px;
-    height: 30px;
-}
-
-.play-controller img {
-    margin-left: 4px;
-}
-
-.song-name {
-    margin-left: 10px;
-    color: #C9C9C9;
-}
-
-.song-name a {
-    color: #959595;
-}
-
-.time-controller {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 400px;
-}
-
-.time-controller span {
-    color: #959595;
-    font-size: 12px;
-    margin-bottom: 1px;
-}
-
-.volume-icon {
-    width: 20px;
-    cursor: pointer;
-}
-
-.time-slider {
-    cursor: pointer;
-    border: none;
-    height: 24px;
-    -webkit-appearance: none;
-    margin: 10px 10px;
-    width: 100%;
-}
-
-.volume-slider {
-    cursor: pointer;
-    border: none;
-    height: 8px;
-    -webkit-appearance: none;
-    margin: 10px 0;
-    width: 100%;
-    max-width: 100px;
-    margin-left: 10px;
-}
-
-.volume-slider:focus {
-    outline: none;
-}
-
-.volume-slider::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 8px;
-    cursor: pointer;
-    animate: 0.2s;
-    box-shadow: 0px 0px 0px #000000;
-    background: #D5DBD3;
-    border-radius: 5px;
-    border: 0px solid #000000;
-}
-
-.volume-slider::-webkit-slider-thumb {
-    box-shadow: 0px 0px 0px #000000;
-    border: 1px solid #C9C9C9;
-    height: 8px;
-    width: 15px;
-    border-radius: 34px;
-    background: #FFFFFF;
-    cursor: pointer;
-    -webkit-appearance: none;
-    margin-top: -0.5px;
-}
-
-.volume-slider:focus::-webkit-slider-runnable-track {
-    background: #D5DBD3;
-}
-
-.volume-slider::-moz-range-track {
-    width: 100%;
-    height: 10px;
-    cursor: pointer;
-    animate: 0.2s;
-    box-shadow: 0px 0px 0px #000000;
-    background: #D5DBD3;
-    border-radius: 5px;
-    border: 0px solid #000000;
-}
-
-.volume-slider::-moz-range-thumb {
-    box-shadow: 0px 0px 0px #000000;
-    border: 1px solid #C9C9C9;
-    height: 17px;
-    width: 17px;
-    border-radius: 34px;
-    background: #FFFFFF;
-    cursor: pointer;
-}
-
-.volume-slider::-ms-track {
-    width: 100%;
-    height: 10px;
-    cursor: pointer;
-    animate: 0.2s;
-    background: transparent;
-    border-color: transparent;
-    color: transparent;
-}
-
-.volume-slider::-ms-fill-lower {
-    background: #D5DBD3;
-    border: 0px solid #000000;
-    border-radius: 10px;
-    box-shadow: 0px 0px 0px #000000;
-}
-
-.volume-slider::-ms-fill-upper {
-    background: #D5DBD3;
-    border: 0px solid #000000;
-    border-radius: 10px;
-    box-shadow: 0px 0px 0px #000000;
-}
-
-.volume-slider::-ms-thumb {
-    margin-top: 1px;
-    box-shadow: 0px 0px 0px #000000;
-    border: 1px solid #C9C9C9;
-    height: 17px;
-    width: 17px;
-    border-radius: 34px;
-    background: #FFFFFF;
-    cursor: pointer;
-}
-
-.volume-slider:focus::-ms-fill-lower {
-    background: #D5DBD3;
-}
-
-.volume-slider:focus::-ms-fill-upper {
-    background: #D5DBD3;
-}
-
-.time-slider {
-    --bar-bg: #D5DBD3;
-    --seek-before-color: #b1b3b1;
-    --knoby: red;
-    --selectedKnoby: blue;
-
-    border-radius: 10px;
-    appearance: none;
-    background: var(--bar-bg);
-    position: relative;
-    width: 100%;
-    height: 8px;
-    outline: none;
-}
-
-.time-slider:focus {
-    outline: none;
-}
-
-.time-slider::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 10px;
-    cursor: pointer;
-    animate: 0.2s;
-    box-shadow: 0px 0px 0px #000000;
-    background: #D5DBD3;
-    border-radius: 5px;
-    border: 0px solid #000000;
-}
-
-.time-slider::-webkit-slider-thumb {
-    box-shadow: 0px 0px 0px #000000;
-    border: none;
-    height: 15px;
-    width: 17px;
-    border-radius: 34px;
-    background: none;
-    cursor: pointer;
-    -webkit-appearance: none;
-    margin-top: -4px;
-    z-index: 4;
-    position: relative;
-}
-
-.time-slider:focus::-webkit-slider-runnable-track {
-    background: #D5DBD3;
-}
-
-.time-slider::-moz-range-track {
-    width: 100%;
-    height: 10px;
-    cursor: pointer;
-    animate: 0.2s;
-    box-shadow: 0px 0px 0px #000000;
-    background: #D5DBD3;
-    border-radius: 5px;
-    border: 0px solid #000000;
-}
-
-.time-slider::-moz-range-thumb {
-    margin-left: 10px;
-    z-index: 5;
-    box-shadow: 0px 0px 0px #000000;
-    border: 1px solid #C9C9C9;
-    height: 17px;
-    width: 17px;
-    border-radius: 34px;
-    background: #FFFFFF;
-    cursor: pointer;
-}
-
-.time-slider::-ms-track {
-    width: 100%;
-    height: 10px;
-    cursor: pointer;
-    animate: 0.2s;
-    background: transparent;
-    border-color: transparent;
-    color: transparent;
-}
-
-.time-slider::-ms-fill-lower {
-    background: #D5DBD3;
-    border: 0px solid #000000;
-    border-radius: 10px;
-    box-shadow: 0px 0px 0px #000000;
-}
-
-.time-slider::-ms-fill-upper {
-    background: #D5DBD3;
-    border: 0px solid #000000;
-    border-radius: 10px;
-    box-shadow: 0px 0px 0px #000000;
-}
-
-.time-slider::-ms-thumb {
-    margin-top: 1px;
-    box-shadow: 0px 0px 0px #000000;
-    border: 1px solid #C9C9C9;
-    height: 17px;
-    width: 17px;
-    border-radius: 34px;
-    background: #FFFFFF;
-    cursor: pointer;
-}
-
-.time-slider:focus::-ms-fill-lower {
-    background: #D5DBD3;
-}
-
-.time-slider:focus::-ms-fill-upper {
-    background: #D5DBD3;
-}
-
-.time-slider::before {
-    content: '';
-    width: var(--seek-before-width);
-    height: 10px;
-    border-radius: 10px;
-    background: #a3a3a3;
-    position: absolute;
-    top: -1px;
-    left: 0;
-    z-index: 0;
-    cursor: pointer;
-}
-
-.replay-controller {
-    margin-right: 14px;
-}
-
-.replay {
-    position: relative;
-    cursor: pointer;
-    border: none;
-    background: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    outline: none;
-    width: 15px;
-    height: 15px;
-}
-
-.replay span {
-    display: none;
-    color: grey;
-    font-size: 8px;
-    position: absolute;
-}
-
-.replay img {
-    width: 15px;
-}
