--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -19,6 +19,7 @@
 }
 
 .userName {
-    font-weight: 500;
+    font-weight: 600;
     font-size: 20px;
+    font-family: 'Noto Sans JP', sans-serif;
 }
